.config/kubernetes/test/ingress/health-ingress-ph.yaml
apiVersion: cert-manager.io/v1alpha2
kind: ClusterIssuer
metadata:
  name: letsencrypt-prod-ph
spec:
  acme:
    email: proxyshadow@gmail.com
    server: https://acme-v02.api.letsencrypt.org/directory
    privateKeySecretRef:
      name: healthtracker-ph-tls
    solvers:
      - http01:
          ingress:
            class: nginx
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ph-healthtracker
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-ph
spec:
  tls:
    - hosts:
        - ph.ncovtracker.xyz
      secretName: healthtracker-ph-tls
  rules:
    - host: ph.ncovtracker.xyz
      http:
        paths:
          - path: /account(/|$)(.*)
            backend:
              serviceName: account
              servicePort: 8080
          - path: /government(/|$)(.*)
            backend:
              serviceName: government
              servicePort: 8080
          - path: /infection
            backend:
              serviceName: infection
              servicePort: 8080
          - path: /notification
            backend:
              serviceName: notification
              servicePort: 8080
          - path: /authentication
            backend:
              serviceName: authentication
              servicePort: 7070
          - path: /resource
            backend:
              serviceName: resource
              servicePort: 9000
          - path: /hospital(/|$)(.*)
            backend:
              serviceName: hospital
              servicePort: 8080
          - path: /person(/|$)(.*)
            backend:
              serviceName: person
              servicePort: 8080
